validations and things

--- a/loudspace/app/views/spaces/_form.html.erb
+++ b/loudspace/app/views/spaces/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="form_center">
 <%= form_for(@space) do |f| %>
   <% if @space.errors.any? %>
     <div id="error_explanation">
@@ -11,11 +12,12 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+</div>
