--- a/loudspace/app/views/spaces_users/_form.html.erb
+++ b/loudspace/app/views/spaces_users/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="form_center">
 <%= form_for(@spaces_user) do |f| %>
   <% if @spaces_user.errors.any? %>
     <div id="error_explanation">
@@ -15,3 +16,4 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
