--- a/loudspace/app/views/users/_form.html.erb
+++ b/loudspace/app/views/users/_form.html.erb
@@ -16,11 +16,11 @@
     <%= f.label :name %><br>
     <%= f.text_field :name, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :email %><br>
-    <%= f.text_field :email, class: 'form-control' %>
+    <%= f.email_field :email, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :password %><br>
     <%= f.password_field :password, class: 'form-control', type: 'password' %>
   </div>
